[package]
name = "acme-lite"
version = "0.0.2"
description = "Request certificates from an ACME provider"
authors = [
    "Martin Algesten <martin@algesten.se>",
    "kpcyrd <git@rxv.cc>",
    "Rob Ede <robjtede@icloud.com>",
]
categories = ["web-programming", "api-bindings"]
keywords = ["letsencrypt", "acme"]
repository = "https://github.com/x52dev/acme-lite"
license = "MIT"
edition = "2021"

[dependencies]
base64 = "0.21"
der = { version = "0.7", features = ["std", "time"] }
ecdsa = { version = "0.16", features = ["signing", "verifying"] }
eyre = "0.6"
log = "0.4"
once_cell = "1"
p256 = { version = "0.13", features = ["pkcs8", "ecdsa-core"] }
parking_lot = "0.12"
pem = { package = "pem-rfc7468", version = "0.7" }
pkcs8 = "0.10"
rand = "0.8"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = { version = "0.10.6", features = ["oid"] }
time = "0.3"
tokio = { version = "1.24.2", features = ["time"] }
x509-cert = { version = "0.2.4", features = ["pem", "builder"] }
zeroize = "1"

[dev-dependencies]
actix-web = "4"
actix-files = "0.6"
color-eyre = "0.6"
env_logger = "0.10"
hyper = { version = "0.14", features = ["server", "tcp", "http1"] }
rcgen = "0.11"
rustls = "0.21"
regex = "1.4"
tokio = { version = "1.24.2", features = ["full"] }
